--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'outfit' ;
-    background: linear-gradient(#ffadd5,#fff7f9);
+    background: linear-gradient(#43d3ef,#a1d0d7);
 }
 .cotact-contaier{
 height: 100vh;
